# dataset-doctor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  Workflow.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
data/: README.md
data/demo/: quotes_to_scrape_doctor_demo.csv
data/raw/: quotes_to_scrape_page_1.csv
dataset_doctor/: __init__.py  analyzer.py  cli.py  config.py  models.py  report.py  warnings.py
dataset_doctor/templates/: report.html.j2
examples/: sample_dataset.csv
tests/: test_analyzer.py  test_cli.py  test_report.py  test_warnings.py
