[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dataset-doctor"
version = "0.1.0.dev0"
description = "Turn messy CSV files into an instant data health report."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Dataset Doctor contributors" },
]
keywords = ["csv", "data-quality", "profiling", "cli", "pandas"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "jinja2>=3.1,<4",
  "pandas>=2.2,<3",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
dataset-doctor = "dataset_doctor.cli:app"

[tool.setuptools.packages.find]
include = ["dataset_doctor*"]
exclude = ["data*", "outputs*", "tests*"]

[tool.setuptools.package-data]
"dataset_doctor" = ["templates/*.j2"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
